fix: [#156] fix the overlapping issue on the CTA button in mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -286,7 +286,7 @@
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 20px;
+    bottom: 130px;
     z-index: 999;
   }
 
